--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,12 @@
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
+        <div class="menu_item__wrapper">
+            <a href="./certificates.html">
+                <p>Certificates</p>
+                <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
+            </a>
+        </div>
 
         <div class="menu_item__wrapper">
             <a href="./contact.html">
