--- a/src/services.html
+++ b/src/services.html
@@ -55,6 +55,12 @@
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
+        <div class="menu_item__wrapper">
+            <a href="./certificates.html">
+                <p>Certificates</p>
+                <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
+            </a>
+        </div>
 
         <div class="menu_item__wrapper">
             <a href="./contact.html">
@@ -322,24 +328,24 @@
                             <a class="footer_logo" href="./index.html"><img src="./assets/images/footer_logo.svg"
                                     class="footer_logo" alt=""></a>
                             <p style="color: #1E1C20;
-                                                        font-size: 20px;
-                                                        font-family: Figtree;
-                                                        font-weight: 500;
-                                                        line-height: 32px;">We keep you up to date</p>
+                                                    font-size: 20px;
+                                                    font-family: Figtree;
+                                                    font-weight: 500;
+                                                    line-height: 32px;">We keep you up to date</p>
                             <div class="email_input__wrapper">
                                 <input type="text" placeholder="Your email address" class="email_input">
                                 <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
+                            <p class="copyrights">© 2024 Horizon Mechanics. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
-                                                            font-size: 16px;
-                                                            font-family: Roboto;
-                                                            font-weight: 500;
-                                                            line-height: 24px;">Stay connected</p>
+                                                        font-size: 16px;
+                                                        font-family: Roboto;
+                                                        font-weight: 500;
+                                                        line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-        "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
@@ -393,6 +399,9 @@
                                 <a href="./index.html#repair">
                                     <p>Repair management</p>
                                 </a>
+                                <a href="./contact.html">
+                                    <p>Request a quote</p>
+                                </a>
 
                             </div>
                         </div>
@@ -400,9 +409,9 @@
 
                             <div class="contact_links" style="margin-top: 0px !important;">
 
-                                <a href="./contact.html">
+                                <!-- <a href="./contact.html">
                                     <p>Request a quote</p>
-                                </a>
+                                </a> -->
 
                             </div>
                         </div>
@@ -412,11 +421,10 @@
                                         class="footer_logo" alt=""></a>
                             </div>
                             <p style="color: #1E1C20;
-                                                                                font-size: 20px;
-                                                                                font-family: Figtree;
-                                                                                font-weight: 500;
-                                                                                line-height: 32px;">We keep you up to
-                                date
+                                                                            font-size: 20px;
+                                                                            font-family: Figtree;
+                                                                            font-weight: 500;
+                                                                            line-height: 32px;">We keep you up to date
                             </p>
                             <div class="email_input__wrapper___mobile">
                                 <input type="text" placeholder="Your email address" class="email_input">
@@ -424,35 +432,33 @@
                             </div>
                             <div class="social_meadia__wrapper___mobile">
                                 <p style="color: #262626;
-                                                                                    font-size: 16px;
-                                                                                    font-family: Roboto;
-                                                                                    font-weight: 500;
-                                                                                    line-height: 24px;">Stay connected
-                                </p>
+                                                                                font-size: 16px;
+                                                                                font-family: Roboto;
+                                                                                font-weight: 500;
+                                                                                line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                            "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                        "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
+                            <p class="copyrights">© 2024 Horizon Mechanics. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
-                                                                                    font-size: 16px;
-                                                                                    font-family: Roboto;
-                                                                                    font-weight: 500;
-                                                                                    line-height: 24px;">Stay connected
-                                </p>
+                                                                                font-size: 16px;
+                                                                                font-family: Roboto;
+                                                                                font-weight: 500;
+                                                                                line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                            "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                        "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
                                             alt=""></a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-5 col-md-5 col-sm-5 mt-4 footer_item">
+                        <div class="col-lg-5 col-md-5 col-sm-5 mt-5 footer_item">
                             <p class="footer_header interested">
                                 Interested in trading with us?
                             </p>
