--- a/src/contact.html
+++ b/src/contact.html
@@ -56,6 +56,12 @@
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
+        <div class="menu_item__wrapper">
+            <a href="./certificates.html">
+                <p>Certificates</p>
+                <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
+            </a>
+        </div>
 
         <div class="menu_item__wrapper">
             <a href="./contact.html">
@@ -319,7 +325,7 @@
                                 <input type="text" placeholder="Your email address" class="email_input">
                                 <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
+                            <p class="copyrights">© 2024 Horizon Mechanics. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
                                                             font-size: 16px;
@@ -382,6 +388,9 @@
                                 <a href="./index.html#repair">
                                     <p>Repair management</p>
                                 </a>
+                                <a href="./contact.html">
+                                    <p>Request a quote</p>
+                                </a>
 
                             </div>
                         </div>
@@ -389,9 +398,9 @@
 
                             <div class="contact_links" style="margin-top: 0px !important;">
 
-                                <a href="./contact.html">
-                                    <p>Request a quote</p>
-                                </a>
+                                <!-- <a href="./contact.html">
+                                        <p>Request a quote</p>
+                                    </a> -->
 
                             </div>
                         </div>
@@ -425,7 +434,7 @@
                                             alt=""></a>
                                 </div>
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
+                            <p class="copyrights">© 2024 Horizon Mechanics. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
                                                                                     font-size: 16px;
@@ -441,7 +450,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-5 col-md-5 col-sm-5 mt-4 footer_item">
+                        <div class="col-lg-5 col-md-5 col-sm-5 mt-5 footer_item">
                             <p class="footer_header interested">
                                 Interested in trading with us?
                             </p>
