fix: partner img change

--- a/src/index.html
+++ b/src/index.html
@@ -562,9 +562,11 @@
                         <img class="swiper-slide supplier_img" src="./assets/images/partners8.svg" alt="">
                         <img class="swiper-slide supplier_img" src="./assets/images/partners9.svg" alt="">
                         <img class="swiper-slide supplier_img" src="./assets/images/partners10.svg" alt="">
-                        <img class="swiper-slide supplier_img" src="./assets/images/Mel.jpg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/Mel png.png"
+                            style="height: 110px; object-fit: contain;" alt="">
 
-                        <img class="swiper-slide supplier_img" src="./assets/images/PDQ_FDH_Stacked_Logo.png" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/pdq.png"
+                            style="height: 110px; object-fit: contain;" alt="">
 
                         <!-- <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                         <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
@@ -581,10 +583,10 @@
                         <img class="supplier_img" src="./assets/images/partners6.svg" alt="">
                         <img class="supplier_img" src="./assets/images/partners7.svg" alt="">
                         <img class="supplier_img" src="./assets/images/partners8.svg" alt="">
-                        <img class="supplier_img" src="./assets/images/Mel.jpg" alt=""><img class="supplier_img"
+                        <img class="supplier_img" src="./assets/images/Mel png.png" alt=""><img class="supplier_img"
                             src="./assets/images/partners8.svg" alt="">
-                        <img class="supplier_img" src="./assets/images/PDQ_FDH_Stacked_Logo.png" alt=""><img
-                            class="supplier_img" src="./assets/images/partners10.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/pdq.png" alt=""><img class="supplier_img"
+                            src="./assets/images/partners10.svg" alt="">
                         <!-- <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                                         <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                                         <img class="swiper-slide" src="./assets/images/partners.svg" alt=""> -->
@@ -841,10 +843,10 @@
             spaceBetween: 24,
             // disableOnInteraction:false,
             loop: true,
-            autoplay: {
-                delay: 1000,
-                disableOnInteraction: false,
-            },
+            // autoplay: {
+            //     delay: 1000,
+            //     disableOnInteraction: false,
+            // },
             pagination: {
                 el: ".swiper-pagination",
                 clickable: true,
