--- a/src/services.html
+++ b/src/services.html
@@ -165,8 +165,8 @@
                     <p class="contactpage_title">Services</p>
                 </div>
                 <div class="col-12">
-                    <p class="contactpage_subtitle service_page__subtitle">We are working to serve you better with our
-                        services.</p>
+                    <p class="contactpage_subtitle service_page__subtitle">Committed to Excellence: We strive to improve
+                        your experience at every stage.</p>
                 </div>
             </div>
             <div class="row">
