--- a/src/index.html
+++ b/src/index.html
@@ -843,10 +843,10 @@
             spaceBetween: 24,
             // disableOnInteraction:false,
             loop: true,
-            // autoplay: {
-            //     delay: 1000,
-            //     disableOnInteraction: false,
-            // },
+            autoplay: {
+                delay: 1000,
+                disableOnInteraction: false,
+            },
             pagination: {
                 el: ".swiper-pagination",
                 clickable: true,
