fix: text center

--- a/src/index.html
+++ b/src/index.html
@@ -608,7 +608,7 @@
                 <div class="row position-absolute mt-5">
                     <div class="col-12">
                         <div class="certificate_section__wrapper">
-                            <p class="certificates_header__title">
+                            <p class="certificates_header__title text-center">
                                 Discover Tailored Solutions with <br> Our Expert Aviation Team
                             </p>
                             <p class="certificates_header__subtitle">Our experienced team of aviation experts will
